--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 #header {
     background-color: rgb(92, 92, 88);
-    padding: 75px;
+    padding: 70px;
     text-align: center;
     font-size: 35px;
     font-family: "Lucida Console", "Courier New", cursive;
     text-transform: uppercase;
     color:rgb(0, 0, 0);
     border: 2px rgb(15, 15, 15) solid;
+    max-width: 60%;    
+    min-width: 500px;
 }
 
 h2 {
@@ -17,8 +19,10 @@ body {
     background-image: url("halfFace.jpg"); 
     background-size: cover;
     background-attachment: fixed;
-    width: 50%;
-    height: 50%;  
+    position:fixed;
+    /* width: 50%;
+    height: 50%;
+     */
 }  
 
 .left_button {
