--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     /* margin-top: 20px; */
 }
         
-#navbar a:hover {
+.navWrap a:hover {
     background-color: rgba(221, 221, 221, 0.582);
     color: black;
 }
